--- a/AddPost/AddPost.csproj
+++ b/AddPost/AddPost.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1db16735-cdcc-47f2-9e03-ecf33b7e641c</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Classes\PhotoDataSet.cs~RF4073a2.TMP" />
