--- a/AddPost/AddPost.csproj
+++ b/AddPost/AddPost.csproj
@@ -14,8 +14,9 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="2.0.1" />
-    <PackageReference Include="Microsoft.ML.Vision" Version="2.0.1" />
+    <PackageReference Include="Microsoft.ML" Version="3.0.0-preview.23266.6" />
+    <PackageReference Include="Microsoft.ML.AutoML" Version="0.20.1" />
+    <PackageReference Include="Microsoft.ML.Vision" Version="3.0.0-preview.23266.6" />
     <PackageReference Include="SciSharp.TensorFlow.Redist" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
@@ -35,14 +36,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup Label="ComputerVision">
-    <None Include="ComputerVision.consumption.cs">
-      <DependentUpon>ComputerVision.mbconfig</DependentUpon>
-    </None>
-    <None Include="ComputerVision.training.cs">
-      <DependentUpon>ComputerVision.mbconfig</DependentUpon>
-    </None>
-    <None Include="ComputerVision.zip">
-      <DependentUpon>ComputerVision.mbconfig</DependentUpon>
+    <None Include="ComputerVision.mlnet">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
