--- a/.editorconfig
+++ b/.editorconfig
@@ -54,6 +54,10 @@ csharp_style_throw_expression = true:suggestion
 csharp_style_prefer_null_check_over_type_check = true:suggestion
 csharp_prefer_simple_default_expression = true:suggestion
 csharp_style_prefer_local_over_anonymous_function = true:suggestion
+csharp_style_prefer_primary_constructors = true:none
+
+# IDE0290: Использовать основной конструктор
+dotnet_diagnostic.IDE0290.severity = none
 
 [*.vb]
 #### Стили именования ####
@@ -122,3 +126,4 @@ dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
 dotnet_style_prefer_compound_assignment = true:suggestion
 dotnet_style_prefer_simplified_interpolation = true:suggestion
 dotnet_style_namespace_match_folder = true:suggestion
+dotnet_style_prefer_collection_expression = true:suggestion
