--- a/AddPost/AddPost.csproj
+++ b/AddPost/AddPost.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyCustomClasses\MyCustomClasses.csproj" />
+    <ProjectReference Include="..\WorkWithPost\WorkWithPost.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
