--- a/AddPost/AddPost.csproj
+++ b/AddPost/AddPost.csproj
@@ -14,6 +14,7 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AForge.Imaging" Version="2.2.5" />
     <PackageReference Include="Microsoft.ML" Version="3.0.0" />
     <PackageReference Include="Microsoft.ML.AutoML" Version="0.21.0" />
     <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="3.0.0" />
