--- a/DataSet/DataSet.csproj
+++ b/DataSet/DataSet.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AForge.Imaging" Version="2.2.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
   </ItemGroup>
 
