--- a/AddDataInDataSet/AddDataInDataSet.csproj
+++ b/AddDataInDataSet/AddDataInDataSet.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataSet\DataSet.csproj" />
+  </ItemGroup>
+
 </Project>
