--- a/NeuralNetwork/NeuralNetwork.csproj
+++ b/NeuralNetwork/NeuralNetwork.csproj
@@ -1,11 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.ML" Version="3.0.1" />
     <PackageReference Include="Microsoft.ML.AutoML" Version="0.21.1" />
@@ -16,9 +14,12 @@
     <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
     <PackageReference Include="TorchSharp-cpu" Version="0.101.5" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\DataSet\DataSet.csproj" />
   </ItemGroup>
-
+  <ItemGroup Label="ComputerVision">
+    <None Include="ComputerVision.mlnet">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
