--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3.2.0
       with:
-        dotnet-version: 'latest'
+        dotnet-version: 8.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Cache .NET packages
