--- a/DataSet/DataSet.csproj
+++ b/DataSet/DataSet.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DataStruct\" />
+  </ItemGroup>
+
 </Project>
