--- a/RepetitionOfPostsBot/RepetitionOfPostsBot.csproj
+++ b/RepetitionOfPostsBot/RepetitionOfPostsBot.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\MyCustomClasses\MyCustomClasses.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Funcs\" />
+  </ItemGroup>
+
 </Project>
