--- a/RepetitionOfPostsBot/RepetitionOfPostsBot.csproj
+++ b/RepetitionOfPostsBot/RepetitionOfPostsBot.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Telegram.Bot" Version="19.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyCustomClasses\MyCustomClasses.csproj" />
   </ItemGroup>
 
