--- a/AddDataInDataSet/AddDataInDataSet.csproj
+++ b/AddDataInDataSet/AddDataInDataSet.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
