--- a/AddPost/AddPost.csproj
+++ b/AddPost/AddPost.csproj
@@ -6,6 +6,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>1db16735-cdcc-47f2-9e03-ecf33b7e641c</UserSecretsId>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Classes\PhotoDataSet.cs~RF4073a2.TMP" />
