--- a/RepetitionOfPostsBot/Properties/launchSettings.json
+++ b/RepetitionOfPostsBot/Properties/launchSettings.json
@@ -3,6 +3,9 @@
     "WSL": {
       "commandName": "WSL2",
       "distributionName": ""
+    },
+    "RepetitionOfPostsBot": {
+      "commandName": "Project"
     }
   }
 }
