--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET
 
 on:
@@ -15,7 +12,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/cache@v4
+    - uses: actions/checkout@v4  # Обязательно указываем checkout
     - name: Setup .NET
       uses: actions/setup-dotnet@v3.2.0
       with:
@@ -23,12 +20,12 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Cache .NET packages
-      uses: actions/cache@v3.3.1
+      uses: actions/cache@v4  # Обновленный кэш
       with:
-        path: ~/.nuget/packages  # Путь к папке с кэшем NuGet-пакетов
-        key: nuget-${{ runner.os }}-${{ hashFiles('**/*.csproj') }}  # Ключ кэша
+        path: ~/.nuget/packages
+        key: nuget-${{ runner.os }}-${{ hashFiles('**/*.csproj') }}
         restore-keys: |
-          nuget-${{ runner.os }}-  # Префикс для восстановления кэша
+          nuget-${{ runner.os }}-
     - name: Build
       run: dotnet build --no-restore
     - name: Test
