--- a/DataSet/DataSet.csproj
+++ b/DataSet/DataSet.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.7" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.3" />
   </ItemGroup>
 
 </Project>
