--- a/RepetitionOfPostsBot/RepetitionOfPostsBot.csproj
+++ b/RepetitionOfPostsBot/RepetitionOfPostsBot.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MyCustomClasses\MyCustomClasses.csproj" />
     <ProjectReference Include="..\NeuralNetwork\NeuralNetwork.csproj" />
+    <ProjectReference Include="..\VKClasses\VKClasses.csproj" />
   </ItemGroup>
 
 </Project>
