--- a/AddPost/AddPost.csproj
+++ b/AddPost/AddPost.csproj
@@ -17,8 +17,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataSet\DataSet.csproj" />
-    <ProjectReference Include="..\MyCustomClasses\MyCustomClasses.csproj" />
     <ProjectReference Include="..\NeuralNetwork\NeuralNetwork.csproj" />
+    <ProjectReference Include="..\VKClasses\VKClasses.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
