--- a/NeuralNetwork/NeuralNetwork.csproj
+++ b/NeuralNetwork/NeuralNetwork.csproj
@@ -8,13 +8,23 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'" />
-  <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('Windows'))">
-	<DefineConstants>WINDOWS</DefineConstants>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.ML.OnnxRuntime.DirectML" Version="1.21.0" />
-  </ItemGroup>
+	
+	<!-- Условия для Windows -->
+	<PropertyGroup Condition="'$(RuntimeIdentifier)' == 'win-x64'">
+		<DefineConstants>WINDOWS</DefineConstants>
+	</PropertyGroup>
+
+	<ItemGroup Condition="'$(RuntimeIdentifier)' == 'win-x64'">
+		<PackageReference Include="Microsoft.ML.OnnxRuntime.DirectML" Version="1.21.0" />
+	</ItemGroup>
+
+	<!-- Условия для Linux/macOS -->
+	<ItemGroup Condition="'$(RuntimeIdentifier)' != 'win-x64'">
+		<PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.21.0" />
+	</ItemGroup>
+	
   <ItemGroup>
     <ProjectReference Include="..\DataSet\DataSet.csproj" />
+    <ProjectReference Include="..\Other\Other.csproj" />
   </ItemGroup>
 </Project>
