--- a/Statistics/Statistics.csproj
+++ b/Statistics/Statistics.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MyCustomClasses\MyCustomClasses.csproj" />
+    <ProjectReference Include="..\VKClasses\VKClasses.csproj" />
   </ItemGroup>
 
 </Project>
