--- a/VKClasses/VKClasses.csproj
+++ b/VKClasses/VKClasses.csproj
@@ -8,4 +8,7 @@
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.7" />
     <PackageReference Include="VkNet" Version="1.78.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Other\Other.csproj" />
+  </ItemGroup>
 </Project>
