--- a/NeuralNetwork/NeuralNetwork.csproj
+++ b/NeuralNetwork/NeuralNetwork.csproj
@@ -10,16 +10,16 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'" />
 	
 	<!-- Условия для Windows -->
-	<PropertyGroup Condition="'$(RuntimeIdentifier)' == 'win-x64'">
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU' OR '$(RuntimeIdentifier)' == 'win-x64'">
 		<DefineConstants>WINDOWS</DefineConstants>
 	</PropertyGroup>
 
-	<ItemGroup Condition="'$(RuntimeIdentifier)' == 'win-x64'">
+	<ItemGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU' OR '$(RuntimeIdentifier)' == 'win-x64'">
 		<PackageReference Include="Microsoft.ML.OnnxRuntime.DirectML" Version="1.21.0" />
 	</ItemGroup>
 
 	<!-- Условия для Linux/macOS -->
-	<ItemGroup Condition="'$(RuntimeIdentifier)' != 'win-x64'">
+	<ItemGroup Condition="'$(Configuration)|$(Platform)'!='Debug|AnyCPU' AND '$(RuntimeIdentifier)' != 'win-x64'">
 		<PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.21.0" />
 	</ItemGroup>
 	
