--- a/VKClasses/VKClasses.csproj
+++ b/VKClasses/VKClasses.csproj
@@ -5,7 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.9" />
     <PackageReference Include="VkNet" Version="1.78.0" />
   </ItemGroup>
   <ItemGroup>
