--- a/UI/UI.csproj
+++ b/UI/UI.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+	<UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="VkNet" Version="1.78.0" />
-  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Other\Other.csproj" />
   </ItemGroup>
+
 </Project>
