--- a/NeuralNetworkAnalyzer/NeuralNetworkAnalyzer.csproj
+++ b/NeuralNetworkAnalyzer/NeuralNetworkAnalyzer.csproj
@@ -2,17 +2,15 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net9.0-windows10.0.22621.0</TargetFramework>
+    <TargetFramework>net9.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
-    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DataSet\DataSet.csproj" />
     <ProjectReference Include="..\NeuralNetwork\NeuralNetwork.csproj" />
-    <ProjectReference Include="..\WinForms\WinForms.csproj" />
   </ItemGroup>
 
 </Project>
